# Changelog

## Version 4.8.0

* Adding #313 basic vsync support for hardware encoders (thanks to Wontell)
* Adding "Auto" profile for VCEncC
* Changing #292 back to PySide2 to be compatible with Windows 7 and 8 (thanks to Causemic)
* Fixing #315 HDR10 info not parsed from subsequent video tracks than the first (thanks to msaintauret)
* Fixing profile not being passed for AVC with VCEencC and stuck on Baseline
* Fixing that force 10-bit encoding for NVEencC was not set from profiles properly (thanks to wynterca)

## Version 4.7.1

* Fixing #304 New profile Audio conversion downmix and bitrate issues (thanks to wynterca)

## Version 4.7.0

* Adding #164 audio matching in profiles (thanks to bmcassagne)
* Adding #261 Advanced settings are currently not saved on Profiles (thanks to georgesaumen)
* Adding #294 NVEncC 10-bit encoding mode for 8-bit source (thanks to Don Gafford)
* Adding HDR10 support, svtav1-params, scene detection, and crf option for SVT AV1
* Adding max colors and stats mode to GIF
* Adding OpenCL support for Remove HDR to speed it up
* Changing FFmpeg download to look for latest master GPL builds
* Fixing #296 low quality auto-crop due to high rounding, increasing accuracy from 16 to 2 pixels (thanks to Rayman24365)
* Fixing #302 unclear when VBV is enabled (thanks to Paul Huckstepp)
* Fixing concat builder behavior to work smoother
* Fixing thumbnail generation for concat images

## Version 4.6.0

* Adding #195 640kbps audio (thanks to ObviousInRetrospect and Harybo)
* Adding Japanese, Portuguese, Russian, Swedish, and Polish translations
* Fixing #272 Codec drop down size fix (thanks to kachijs)
* Fixing #278 FastFlix occasionally getting stuck on a single video in a queue (thanks to kamild_)
* Fixing build for 3.10 by updating to PySide6 6.2.2.1 (thanks to Nhunz)
* Fixing status parser when using -psnr (thanks to ObviousInRetrospect)
* Fixing VCE and NVENC encoders would set first subtitle track to default

## Version 4.5.1
