@@ -52,7 +52,17 @@ recommended_crfs = [
     "Custom",
 ]
 
-pix_fmts = ["8-bit: yuv420p", "10-bit: yuv420p10le", "12-bit: yuv420p12le"]
+pix_fmts = [
+    "8-bit: yuv420p",
+    "10-bit: yuv420p10le",
+    "12-bit: yuv420p12le",
+    "8-bit 422: yuv422p",
+    "8-bit 444: yuv444p",
+    "10-bit 422: yuv422p10le",
+    "10-bit 444: yuv444p10le",
+    "12-bit 422: yuv422p12le",
+    "12-bit 444: yuv444p12le",
+]
 
 
 def get_breaker():
@@ -505,10 +515,10 @@ class HEVC(SettingPanel):
             self.widgets.repeat_headers.setDisabled(False)
         else:
             self.widgets.pix_fmt.clear()
-            if bit_depth == 12:
-                self.widgets.pix_fmt.addItems(pix_fmts[2:])
-                self.widgets.pix_fmt.setCurrentIndex(0)
-            elif bit_depth == 10:
+            # if bit_depth == 12:
+            #     self.widgets.pix_fmt.addItems(pix_fmts[2:])
+            #     self.widgets.pix_fmt.setCurrentIndex(0)
+            if bit_depth >= 10:
                 self.widgets.pix_fmt.addItems(pix_fmts[1:])
                 self.widgets.pix_fmt.setCurrentIndex(0)
             else:
